exports[`<DeleteButton /> matches snapshot of when the app is in read-only mode 1`] = `
<span
  style={
    Object {
      "height": "48px",
    }
  }>
  <div
    data-for="trash-tip"
    data-tip={true}
    style={
      Object {
        "display": "inline-block",
      }
    }>
    <IconButton
      disableTouchRipple={false}
      disabled={false}
      iconStyle={Object {}}
      id="TrashButton"
      onTouchTap={[Function]}
      style={
        Object {
          "zIndex": 5,
        }
      }
      tooltipPosition="bottom-center"
      touch={false}>
      <ActionDelete />
    </IconButton>
  </div>
  <ReactTooltip
    effect="solid"
    id="trash-tip"
    insecure={true}
    place="bottom"
    resizeHide={true}
    wrapper="div">
    <span>
      Click to delete snippet
    </span>
  </ReactTooltip>
</span>
`;

exports[`<DeleteButton /> matches snapshot of when the app is not in read-only mode 1`] = `
<span
  style={
    Object {
      "height": "48px",
    }
  }>
  <div
    data-for="trash-tip"
    data-tip={true}
    style={
      Object {
        "display": "inline-block",
      }
    }>
    <IconButton
      disableTouchRipple={false}
      disabled={true}
      iconStyle={Object {}}
      id="TrashButton"
      onTouchTap={[Function]}
      style={
        Object {
          "zIndex": 5,
        }
      }
      tooltipPosition="bottom-center"
      touch={false}>
      <ActionDelete />
    </IconButton>
  </div>
  <ReactTooltip
    effect="solid"
    id="trash-tip"
    insecure={true}
    place="bottom"
    resizeHide={true}
    wrapper="div">
    <span>
      You can only delete snippets
      <br />
      that you own
    </span>
  </ReactTooltip>
</span>
`;
